--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
         <img src="/static/img/voice.png" />
         <span>Voice</span>
       </a>
-      <a id="vote" title="vote" href="http://vote.hackerdojo.com">
+      <a id="vote" title="vote" href="http://vote.hackerdojo.com/purchase">
         <img src="/static/img/vote.jpg" />
         <span>Vote</span>
       </a>
